--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
-.vscode/settings.json
+.vscode/
+
 
 .history/
+*/.vscode/settings.json
